# wallock

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Configuration.md  Contributing.md  LICENSE  README.md  codecov.yaml  versions.cmake
.github/workflows/: format.yml  test.yml  tidy.yml
cmake/: BuildFlags.cmake  CodeCoverageReport.cmake  Options.cmake  ProjectLibraries.cmake  WaylandGen.cmake  tools.cmake
cmake/modules/: FindPAM.cmake
include/wallock/: Wallock.hpp  version.h
main/: CMakeLists.txt
main/src/: main.cpp
pam/: wallock
src/: CMakeLists.txt  State.cpp  State.hpp  Wallock.cpp
src/conf/: Config.cpp  Config.hpp  ConfigDefaultSettings.cpp  ConfigDefaultSettings.hpp  ConfigGenerator.cpp  ConfigGenerator.hpp  ConfigMacros.hpp  ConfigValidator.cpp  ConfigValidator.hpp
src/display/: Display.cpp  Display.hpp  PrimaryDisplayState.hpp  Screen.cpp  Screen.hpp
src/input/: Keyboard.cpp  Keyboard.hpp  Pointer.cpp  Pointer.hpp  Seat.cpp  Seat.hpp
src/mpv/: MpvEventHandler.cpp  MpvEventHandler.hpp  MpvFileLoader.cpp  MpvFileLoader.hpp  MpvResource.cpp  MpvResource.hpp  MpvResourceConfig.cpp  MpvResourceConfig.hpp  MpvScreenshot.cpp  MpvScreenshot.hpp
src/overlay/: CairoAnalogClockElement.cpp  CairoAnalogClockElement.hpp  CairoBarElement.cpp  CairoBarElement.hpp  CairoBarSurface.cpp  CairoBarSurface.hpp  CairoFontCache.cpp  CairoFontCache.hpp  CairoImageElement.cpp  CairoImageElement.hpp  CairoIndicatorElement.cpp  CairoIndicatorElement.hpp  CairoIndicatorMessage.cpp  CairoIndicatorMessage.hpp  CairoIndicatorSurface.cpp  CairoIndicatorSurface.hpp  CairoState.cpp  CairoState.hpp  CairoSurface.cpp  CairoSurface.hpp  Color.cpp  Color.hpp  ColorSet.cpp  ColorSet.hpp
src/pam/: PasswordManager.cpp  PasswordManager.hpp
src/registry/: BufferPool.cpp  BufferPool.hpp  Compositor.cpp  Compositor.hpp  LayerShell.cpp  LayerShell.hpp  Lock.cpp  Lock.hpp  LockManager.cpp  LockManager.hpp  Registry.cpp  Registry.hpp  Subcompositor.cpp  Subcompositor.hpp  XdgBase.cpp  XdgBase.hpp
src/render/: Renderer.cpp  Renderer.hpp  RendererCreator.cpp  RendererCreator.hpp  RendererEGL.cpp  RendererEGL.hpp  RendererMpv.cpp  RendererMpv.hpp
src/surface/: LockSurface.cpp  LockSurface.hpp  Surface.cpp  Surface.hpp  SurfaceEGL.cpp  SurfaceEGL.hpp  WallpaperSurface.cpp  WallpaperSurface.hpp
src/util/: BatteryDiscover.cpp  BatteryDiscover.hpp  CommandProcessor.cpp  CommandProcessor.hpp  FileUtils.cpp  FileUtils.hpp  Formatter.cpp  Formatter.hpp  LockCmd.cpp  LockCmd.hpp  Log.cpp  Log.hpp  Loop.cpp  Loop.hpp  NetworkDiscover.cpp  NetworkDiscover.hpp  OnKeyProcessor.cpp  OnKeyProcessor.hpp  PasswordBuffer.cpp  PasswordBuffer.hpp  SignalHandler.cpp  SignalHandler.hpp  StringUtils.cpp  StringUtils.hpp  ThreadUtils.cpp  ThreadUtils.hpp
test/: CMakeLists.txt
test/src/: MockObjects.hpp  TestUtils.cpp  TestUtils.hpp  Wallock.cpp  WallockMock.hpp  main.cpp
test/src/conf/: ConfigTest.cpp
test/src/mpv/: MpvFileLoaderTest.cpp
test/src/overlay/: BarSurfaceTest.cpp  CairoAnalogClockTest.cpp  CairoBarTest.cpp  CairoIndicatorMessageTest.cpp  CairoIndicatorSurfaceTest.cpp  CairoIndicatorTest.cpp  CairoSurfaceTest.cpp
test/src/util/: BatteryDiscoverTest.cpp  FileUtilsTest.cpp  FormatterTests.cpp  LoopTest.cpp  NetworkDiscoverTest.cpp  OnKeyProcessorTest.cpp  StringUtilsTests.cpp
wayland-protocols/: wlr-layer-shell-unstable-v1.xml
